--- a/main.css
+++ b/main.css
@@ -9,53 +9,189 @@
     text-decoration: none;
     list-style: none;
     outline: none;
+    
 }
+
 
 html {
     scroll-behavior: smooth;
-    -webkit-font-smoothing: antialiased;
+    
+}
+
+header,
+section h2,
+section h3,
+form button {
+    font-family: 'MontSerrat', sans-serif;
+    font-weight: normal;
+    
+}
+
+
+
+header {
+    padding: 18px 0;
+    background-color: #182C61;
+    color: #ecf0f1;
+}
+
+header h1 {
+    text-shadow: 3px 3px 0 #000000 ;
+}
+
+header nav li {
+    display: inline;
+    margin-left: 20px;
+    font-size: 18px;
+}
+
+header nav li a {
+    margin-left: 20px;
+    color: #ecf0f1f5;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+header nav li a:hover {
+    color: #fff;
 }
 
 .container {
     max-width: 1280px;
     width: 100%;
     margin: 0 auto;
+    padding: 0 6px;
 }
 
-
-header {
-    background-color: #182C61;
-    padding: 16px 0;
-    color: #ecf0f1;
-}
-
-header .container {
+header .container,
+section .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header h1 {
-    font-size: 35px;
-    font-weight: 900;
-    text-shadow: 4px 3px 1px #1b1b1b;
+.brands-list {
+    margin-top: 16px;
 }
 
-header nav li {
+.brands-list img {
+    height: 24px;
+}
+
+.brands-list li {
     display: inline;
-    margin-left: 18px;
-    font-size: 18px;
+    margin-right: 8px;
 }
 
-header nav li a {
-    color: #d7d7d7;
+section .container {
+    align-items: flex-start;
+}
+
+section {
+    padding: 24px 0;
+}
+
+section h2 {
+    margin-bottom: 16px;
     font-weight: 700;
-    transition: all 0.3s;
-    margin-right: 15px;
-} 
 
-header nav li a:hover {
-    color: #ecf0f1;
+}
+
+section {
+    color: #182C61;
+    margin-top: 36px;
+}
+
+section p {
+    margin-bottom: 8px;
+    font-size: 14px;
+    font-weight: 500;
+    
+}
+
+.store-front {
+    margin-right: 32px;
+}
+
+.align-itens-center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.social-links img {
+    height: 24px;
+    margin-right: 4px;
+}
+
+.social-links li {
+    display: inline;
+    margin-right: 8px;
+}
+
+.social-links li a {
+    text-decoration: none;
+}
+
+#contact .container {
+    display: block;
+}
+
+.contact-methods {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 
+
+
+form input,
+form textarea,
+form button {
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+    border: 1px solid #182C61;
+    border-radius: 4px;
+    
+}
+
+form textarea {
+    resize: none;
+    height: 180px;
+}
+
+section h3 {
+    margin-bottom: 16px;
+    font-weight: 600;
+}
+
+form button {
+    background-color: #182C61;
+    color: #e7e8e9ec;
+    border: none;
+    cursor: pointer;
+    transition: all 0.3s;
+    padding: 12px 0;
+    font-size: 16px;
+}
+
+form button:hover {
+    background-color: #314e9e;
+    color: #fff;
+}
+
+input:focus, textarea:focus {
+    outline-color: #404b6b;
+}
+
+footer {
+    background-color: #182C61;
+    color: #ecf0f1;
+    padding: 20px 0;
+    text-align: center;
+    
+    
+}
